--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,8 +6,10 @@
     class="flex flex-row justify-center items-center py-5 w-[1120px] mx-auto "
 >
     <nav class="flex flex-row gap-x-10 opacity-90 text-lg">
-        <a href="/">Home</a>
-        <a href="/about">about</a>
-        <a href="/projects">projects</a>
+        <a href="#" class="hover:text-yellow-400/90 transition">Inicio</a>
+        <a href="#experience" class="hover:text-yellow-400/90 transition">Experiencia</a>
+        <a href="#projects" class="hover:text-yellow-400/90 transition">projectos</a>
+        <a href="#Contact" class="hover:text-yellow-400/90 transition">Contacto</a>
+
     </nav>
 </header>
