--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,13 +32,19 @@ const { title, description } = Astro.props;
 	}
 	html {
 		font-family:'Onest Variable', system-ui, sans-serif;
+		scroll-behavior: smooth;
 	}
 	body{
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		background: #05050505;
-		height: 100hv;
+		min-height: 100hv;
+	}
+	@media(prefers-reduce-motion: reduce){
+		html{
+			scroll-behavior: auto;
+		}
 	}
 	
 </style>
