Experience's styles added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ description="Abierto a contratación para desarrollo web con uso de React y/o As
 				</div>
 			</h1>
 			<h2 class="text-xl opacity-80">
-				<span class="opacity-90 text-yellow-400 font-bold"> Desarrollador Front-End</span> de Bogotá, Colombia 🌏. <span class="opacity-90"> Especializado
+				<span class="text-yellow-200 font-semibold"> Desarrollador Front-End</span> de Bogotá, Colombia 🌏. <span class="opacity-90"> Especializado
 				en crear paginas web unicas.</span>
 			</h2>
 
