--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -11,13 +11,13 @@ const {Date,Title,Description} = Astro.props
 >
 </div>
 <time
-    class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+    class="mb-1 text-sm font-normal leading-none text-sky-300/90 dark:text-gray-500"
     >{Date}</time
 >
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+<h3 class="text-lg font-semibold text-yellow-200 mt-2">
     {Title}
 </h3>
-<p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+<p class="mb-4 text-base font-normal text-gray-300 text-pretty">
     {Description}
 </p>
 <a
