--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 import '@fontsource-variable/onest';
 interface Props {
 	title: string;
@@ -23,6 +24,7 @@ const { title, description } = Astro.props;
 		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 		<Header />
 		<slot /> <!-- Donde se renderizan las paginas/rutas -->
+		<Footer />
 	</body>
 </html>
 
