--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <header
-    class="flex flex-row justify-center items-center py-5 w-[1120px] mx-auto "
+    class="flex flex-row justify-center items-center  py-5 w-full xl:w-[750px] mx-auto fixed top-0 left-0 right-0 mt-2 rounded-xl backdrop-blur-xl bg-white/5"
 >
     <nav class="flex flex-row gap-x-10 opacity-90 text-lg">
         <a href="#" class="hover:text-yellow-400/90 transition">Inicio</a>
