--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,7 @@ const { title, description } = Astro.props;
 		justify-content: center;
 		background: #05050505;
 		min-height: 100hv;
+		max-width: 100vw;
 	}
 	@media(prefers-reduce-motion: reduce){
 		html{
