proyect component added and styled, also footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,9 @@
-<footer class="w-full py-20">
-    Espacio reservado para footer
+
+
+<footer class=" rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto">
+    <div class="w-full mx-auto max-w-screen-xl p-4 flex md:items-center justify-center ">
+      <span class="text-sm sm:text-center text-white">© 2023 Created by: <a class="font-semibold hover:underline"  href="https://github.com/XnicolasG" target="_blank"> Nicolás 🍕</a>.
+    </span>
+    
+    </div>
 </footer>
