--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,13 +3,14 @@
 ---
 
 <header
-    class="flex flex-row justify-center items-center  py-5 w-full xl:w-[750px] mx-auto fixed top-0 left-0 right-0 mt-2 rounded-xl backdrop-blur-xl bg-white/5"
+    class="flex flex-row justify-center items-center  py-5 w-full xl:w-[750px] mx-auto fixed top-0 left-0 right-0 mt-1 rounded-xl 
+    backdrop-blur-sm bg-white/5 z-20"
 >
-    <nav class="flex flex-row gap-x-10 opacity-90 text-lg">
-        <a href="#" class="hover:text-yellow-400/90 transition">Inicio</a>
-        <a href="#experience" class="hover:text-yellow-400/90 transition">Experiencia</a>
-        <a href="#projects" class="hover:text-yellow-400/90 transition">projectos</a>
-        <a href="#Contact" class="hover:text-yellow-400/90 transition">Contacto</a>
+    <nav class="flex flex-row gap-x-4 lg:gap-x-10 opacity-90 text-lg">
+        <a href="#" class="hover:text-yellow-500/90 hover:font-bold transition">Inicio</a>
+        <a href="#experience" class="hover:text-yellow-500/90 hover:font-bold transition">Experiencia</a>
+        <a href="#projects" class="hover:text-yellow-500/90 hover:font-bold transition">projectos</a>
+        <a href="#Contact" class="hover:text-yellow-500/90 hover:font-bold transition">Contacto</a>
 
     </nav>
 </header>
