--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Mail from "../components/icons/Mail.astro";
 import Experience from "../components/Experience.astro";
 import Briefcase from "../components/icons/Briefcase.astro";
 import Code from '../components/icons/Code.astro'
+import Proyects from "../components/Proyects.astro";
 ---
 
 <Layout
@@ -76,6 +77,7 @@ import Code from '../components/icons/Code.astro'
 				<Code class="size-7 "/>
 				Proyectos Personales
 			</h2>
+			<Proyects />
 		</SectionContainer>
 	</main>
 </Layout>
