--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,10 @@
 ---
 
 <header
-    class="flex flex-row justify-center items-center  py-5 w-full xl:w-[750px] mx-auto fixed top-0 left-0 right-0 mt-1 rounded-xl 
+    class="flex flex-row justify-center items-center  py-5 w-full xl:w-[750px] mx-auto fixed top-0 left-0 right-0 mt-1 sm:rounded-xl xl:mt-6 transiton
     backdrop-blur-sm bg-white/5 z-20"
 >
-    <nav class="flex flex-row gap-x-4 lg:gap-x-10 opacity-90 text-lg">
+    <nav class="flex flex-row gap-x-4 sm:gap-x-6 lg:gap-x-10 opacity-90 text-lg">
         <a href="#" class="hover:text-yellow-500/90 hover:font-bold transition">Inicio</a>
         <a href="#experience" class="hover:text-yellow-500/90 hover:font-bold transition">Experiencia</a>
         <a href="#projects" class="hover:text-yellow-500/90 hover:font-bold transition">projectos</a>
