--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -55,7 +55,7 @@ const PROYECTS = [
 ---
 
 {
-    PROYECTS.map(({ image, title, description, tags, github }) => (
+    PROYECTS.map(({ image, title, description, tags, github, link }) => (
         <article class="mb-6">
             <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
             <p class="text-pretty text-lg mb-4">{description}</p>
@@ -72,11 +72,13 @@ const PROYECTS = [
                     </li>
                 ))}
             </ul>
-            <img
+            <a href={link} target="_blank">
+                <img
                 class="rounded shadow-2xl shadow-white/20 w-90 hover:scale-105 transition"
                 src={image}
                 alt={`Imagen de proyecto ${title}`}
-            />
+                />
+            </a>
         </article>
     ))
 }
