--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,10 @@
     backdrop-blur-sm bg-white/5 z-20"
 >
     <nav class="flex flex-row gap-x-4 sm:gap-x-6 lg:gap-x-10 opacity-90 text-lg">
-        <a href="#" class="hover:text-yellow-500/90 hover:font-bold transition">Inicio</a>
-        <a href="#experience" class="hover:text-yellow-500/90 hover:font-bold transition">Experiencia</a>
-        <a href="#projects" class="hover:text-yellow-500/90 hover:font-bold transition">projectos</a>
-        <a href="#Contact" class="hover:text-yellow-500/90 hover:font-bold transition">Contacto</a>
+        <a href="#" class="hover:text-white/90 hover:font-semibold hover:border-b-4 transition-all">Inicio</a>
+        <a href="#experience" class="hover:text-white/90 hover:font-semibold hover:border-b-4 transition-all">Experiencia</a>
+        <a href="#projects" class="hover:text-white/90 hover:font-semibold hover:border-b-4 active:border-b-4 transition-all">projectos</a>
+        <a href="#Contact" class="hover:text-white/90 hover:font-semibold hover:border-b-4 focus:border-b-2 transition-all">Contacto</a>
 
     </nav>
 </header>
